--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@modelcontextprotocol/server-sysauto-ask",
+  "name": "@rogeriolembo/mcp-api",
   "version": "0.1.0",
   "description": "MCP server for SysAuto API integration",
   "license": "MIT",
