--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "watch": "tsc --watch"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.1"
+    "@modelcontextprotocol/sdk": "^1.0.1",
+    "@types/node-fetch": "^2.6.12",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@types/node": "^22",
+    "@types/node": "^22.13.14",
     "shx": "^0.3.4",
-    "typescript": "^5.6.2"
+    "typescript": "^5.8.2"
   }
 }
